Tue Jul  7 16:59:03 1998  Tom Yu  <tlyu@mit.edu>

	* chk_trans.c: Fix up previous fix; short-circuit out when
	trans->length == 0.

Wed Jul  1 17:59:26 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* chk_trans.c (krb5_check_transited_list): Fix use of an
 		uninitialized variable; apparently the code was depending
 		on the stack garbage being non-zero(!)

1998-05-26  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* srv_rcache.c (krb5_get_server_rcache): 
	* auth_con.c (krb5_auth_con_setrcache): Export this function in
		Windows DLL.

1998-05-12  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* str_conv.c (krb5_timestamp_to_sfstring): Make sure the date
		string printed uses 4 digit years.

1998-05-08  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* str_conv.c (krb5_string_to_timestamp, strptime): Fix routines to
		be able to properly parse Y2K dates.  

	* t_kerb.c: Add ability to test krb5_string_to_timestamp

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* t_ser.c (main): POSIX states that getopt returns -1
		when it is done parsing options, not EOF.

1998-05-05  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* get_in_tkt.c (krb5_get_init_creds): If
		libdefaults/{REALM}/noaddresses is true, then don't put
		any addresses in the ticket request.

Mon May  4 15:54:07 1998  Tom Yu  <tlyu@mit.edu>

	* get_in_tkt.c: Add prototype for make_preauth_list.

Sat May  2 21:46:02 1998  Tom Yu  <tlyu@mit.edu>

	* get_in_tkt.c (krb5_get_in_tkt): Add missing argument to call to
	make_preauth_list to avoid stack smashing.  Pointed out by lxs.

Mon Mar 16 19:50:55 1998  Tom Yu  <tlyu@mit.edu>

	* chk_trans.c (krb5_check_transited_list): Check lengths when
	appending to next and prev.

Fri Feb 27 18:03:33 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Changed thisconfigdir to point at the lib/krb5
 		directory, since we've moved the configure.in tests in
 		this directory to the toplevel lib/krb5 configure.in

Thu Feb 19 19:03:20 1998  Tom Yu  <tlyu@mit.edu>
